k8s/local/argocd/argo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  name: argo-ingress
  namespace: argocd
spec:
  tls:
    - hosts:
        - "argo.cluster.local"
      secretName: argo-tls
  rules:
    - host: "argo.cluster.local"
      http:
        paths:
          - path: /(argo\/.*)
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
